--- a/docker/local/deployment/docker-compose.yml
+++ b/docker/local/deployment/docker-compose.yml
@@ -77,6 +77,7 @@ services:
       MONGO_URL: ${MONGO_URL}
       MONGO_MAX_POOL_SIZE: ${MONGO_MAX_POOL_SIZE}
       REDIS_HOST: ${REDIS_HOST}
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
       REDIS_PORT: ${REDIS_PORT}
       REDIS_DB_INDEX: 2
       REDIS_CACHE_SERVICE_HOST: ${REDIS_CACHE_SERVICE_HOST}
@@ -108,6 +109,7 @@ services:
       MONGO_URL: ${MONGO_URL}
       MONGO_MAX_POOL_SIZE: ${MONGO_MAX_POOL_SIZE}
       REDIS_HOST: ${REDIS_HOST}
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
       REDIS_PORT: ${REDIS_PORT}
       JWT_SECRET: ${JWT_SECRET}
       WS_CONTEXT_PATH: ${WS_CONTEXT_PATH}
